# klininfo

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  config.h  configure  configure.in  configure.in.in  klininfo.kdevelop  klininfo.kdevelop.pcs  klininfo.kdevelop.spec  klininfo.kdevses  subdirs
doc/: Makefile  Makefile.am  Makefile.in
doc/en/: Makefile  Makefile.am  Makefile.in  index.cache.bz2  index.docbook
doc/en/html/: File_options.html  Fonts.html  commands.html  compilation.html  configuration.html  credits.html  faq.html  important_files.html  index.html  information.html  installation.html  introduction.html  misc_options.html  packages.html  requirements.html  settings.html  using-klininfo.html
icons/: Makefile  Makefile.am  Makefile.in
pixmaps/: Makefile  Makefile.am  Makefile.in
po/: Makefile  Makefile.am  Makefile.in  lt.gmo  lt.po  lt.qm  lt.ts  lt_LT.gmo  lt_LT.po  lt_LT.qm  lt_LT.ts
src/: Makefile  Makefile.am  Makefile.in  all_info  comdescrdlg.cpp  comdescrdlg.h  comdescrdlg.ui  config_files.cpp  config_files.h  config_files.ui  config_font.cpp  config_font.h  config_font.ui  config_misc.cpp  config_misc.h  config_misc.ui  configdlg.cpp  configdlg.h  configdlg.ui  dudlg.cpp  dudlg.h  dudlg.ui  fileviewdlg.cpp  fileviewdlg.h  fileviewdlg.ui  finputdlg.cpp  finputdlg.h  finputdlg.ui  fontdlg.cpp  fontdlg.h  fontdlg.ui  inputdlg.cpp  inputdlg.h  inputdlg.ui  klininfo  klininfo.desktop  klininfo.lsm  klininfodialog.cpp  klininfodialog.h  klininfodialog.ui  (+35 more)
