KDE_DOCS = klininfo
KDE_LANG = en
kde_docs_KDEDOCS =  command_desc.png files_log.png files_system.png fonts_families.png fonts_kde.png info_du.png info_memory.png info_modules.png info_partition.png info_printenv.png info_process.png options_files.png options_font.png options_misc.png packages_rpm.png packages_slack.png packages_vers.png
